small overflow fix

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -130,19 +130,19 @@ a {
             margin-top: 30px;
             width: 75vw;
             margin-inline: auto;
-
+            
             .booking-title {
                 display: flex;
-
+                
                 .title {
                     flex: 1;
                     border-right: 3px solid white;
-    
+                    
                     h2 {
                         font-size: 2rem;
                     }
                 }
-
+                
                 .contacts {
                     flex: 3;
                     display: flex;
@@ -154,7 +154,7 @@ a {
                         display: flex;
                         align-items: center;
                         column-gap: 20px;
-
+                        
                         .contact-bubble {
                             background-color: white;
                             padding: 15px 30px;
@@ -180,10 +180,11 @@ a {
                 display: flex;
                 align-items: center;
                 column-gap: 30px;
+                overflow: hidden;
 
                 .car {
                     width: 40vw;
-
+                    
                     img {
                         width: 35vw;
                         margin-left: -20px;
